--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,9 +86,9 @@ header a {
     display: block;
     width: 100%;
     height: 20px;
-    background: linear-gradient(white 5%, #4f4a41ee);
+    background: linear-gradient(#4f4a4100, var(--davys-grey));
     position: relative;
-    top: -10px;
+    top: -19px;
 }
 
 #cover-text {
@@ -115,6 +115,16 @@ header a {
     top: 0;
     width: 100%;
     height: var(--mobile-url-bar-height);
+}
+
+#local-nav::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 15px;
+    background: linear-gradient(#4f4a4100,var(--davys-grey));
+    position: absolute;
+    top: -10px;
 }
 
 #local-nav > ul {
