--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,9 +151,20 @@ header a {
     color: var(--key-lime);
 }
 
-/* temp */
+/* Introduction and youtube video */
 
 #intro {
-    height: 1200px;
+    margin: 0 2%;
     padding-top: var(--mobile-url-bar-height);
+}
+
+#intro > h2 {
+    text-align: center;
+    font-size: 170%;
+    margin-bottom: 1rem;
+}
+
+#yt-video {
+    width: 100%;
+    height: calc(100vw*0.52);
 }
