style:Add landscape media query for hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,11 @@ header a {
     width: 100%;
     height: calc(100vw*0.52);
 }
+
+/* Media queries */
+@media (orientation: landscape) {
+    #hero {
+        background-position: center center;
+        background-size: 100% auto;
+    }
+}
