--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ header a {
     content: "";
     display: block;
     width: 100%;
-    height: 15px;
+    height: 10px;
     background: linear-gradient(#4f4a4100,var(--davys-grey));
     position: absolute;
     top: -10px;
@@ -157,6 +157,7 @@ header a {
     color: var(--alice-blue);
     text-transform: uppercase;
     text-decoration: none;
+    padding: calc((var(--mobile-url-bar-height) - 1.3rem) / 2) 0;
 }
 
 #local-nav a:hover {
