--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h2 {
 
 /* Logo and header */
 
-header {
+body > header {
     height: var(--header-height);
 }
 
@@ -201,13 +201,11 @@ header ~ section {
     position: sticky;
     top: var(--mobile-url-bar-height);
     z-index: 5;
-    height: unset;
-
     background-color: white;
     padding-left: 2rem;
 }
 
-article h3::before {
+#history-timeline > article h3::before {
     content: "";
     box-sizing: border-box;
     display: block;
@@ -220,7 +218,7 @@ article h3::before {
     border-radius: 50%;
 }
 
-article section {
+#history-timeline > article section {
     margin-left: .5rem;
     border-left: 3px solid var(--oxford-blue);
     padding-left: .5rem;
@@ -347,6 +345,21 @@ input[type="reset"] {
 
 input[type="reset"]:active {
     opacity: 0;
+}
+
+/* Gallery */
+
+#gallery-content img {
+    width: 100%;
+}
+
+#gallery-content > hr {
+    margin: 15px 0;
+    border: 1px solid var(--davys-grey);
+    box-shadow: 0 0 10px 2px var(--davys-grey);
+    position: relative;
+    width: 100vw;
+    left: -2%;
 }
 
 /* Media queries */
