--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,7 @@ input[type="reset"]:active {
 
     #local-nav > nav > ul {
         border-radius: 10px;
+        box-shadow: 0 0 10px 5px var(--alice-blue);
     }
 
     #local-nav li {
