--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Arbutus+Slab&family=Ephesis&display=swap');
 
 :root {
-    --main-text-color: #000;
     --header-height: 75px;
     --mobile-url-bar-height: 55px;
     --hr-spacer-height: 20px;
@@ -26,6 +25,7 @@ html {
 
 body {
     font-family: "Arbutus Slab", sans-serif;
+    font-size: 16px;
 }
 
 h1, h2 {
@@ -37,6 +37,11 @@ h2 {
     text-align: center;
     font-size: 280%;
     margin-bottom: 1rem;
+}
+
+p {
+    text-indent: 1rem;
+    line-height: 1.2rem;
 }
 
 /* General classes */
@@ -155,7 +160,7 @@ header ~ section {
 
 #cover-text > h2 {
     color: var(--key-lime);
-    word-wrap: normal;
+    white-space: nowrap;
     font-size: 150%;
     margin-bottom: unset;
 }
@@ -221,9 +226,12 @@ main {
 #history-timeline h3{
     position: sticky;
     top: calc(var(--mobile-url-bar-height) - 1px);
-    z-index: 5;
     background-color: white;
+    box-shadow: 0 0 0.9rem 0.3rem white;
+    background-color: #fffe;
+    margin: 3px 0;
     padding-left: 2rem;
+    z-index: 5;
 }
 
 #history-timeline h3::before {
@@ -238,7 +246,7 @@ main {
     border-radius: 50%;
 }
 
-#history-timeline h3 ~ p {
+#history-timeline p {
     margin-left: .5rem;
     border-left: 3px solid var(--oxford-blue);
     padding-left: .5rem;
